IFS-5960 Fix more broken layouts

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
@@ -252,7 +252,3 @@ hr,
   padding-left: 20px;
   text-align: right;
 }
-
-.text-align-right {
-  text-align: right;
-}
