--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/pages/_project-setup.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/pages/_project-setup.scss
@@ -17,6 +17,10 @@
       }
 
       min-width: 450px;
+      word-break: normal;
+    }
+    td {
+      word-break: normal;
     }
   }
 }
